footer alignment fixed

--- a/src/output.css
+++ b/src/output.css
@@ -633,6 +633,10 @@ video {
   left: 0px;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -647,6 +651,10 @@ video {
 
 .row-start-10 {
   grid-row-start: 10;
+}
+
+.row-start-2 {
+  grid-row-start: 2;
 }
 
 .m-8 {
@@ -785,6 +793,166 @@ video {
   height: 50%;
 }
 
+.h-\[20rem\] {
+  height: 20rem;
+}
+
+.h-\[12rem\] {
+  height: 12rem;
+}
+
+.h-\[10rem\] {
+  height: 10rem;
+}
+
+.max-h-0 {
+  max-height: 0px;
+}
+
+.max-h-0\.5 {
+  max-height: 0.125rem;
+}
+
+.max-h-1 {
+  max-height: 0.25rem;
+}
+
+.max-h-1\.5 {
+  max-height: 0.375rem;
+}
+
+.max-h-10 {
+  max-height: 2.5rem;
+}
+
+.max-h-11 {
+  max-height: 2.75rem;
+}
+
+.max-h-12 {
+  max-height: 3rem;
+}
+
+.max-h-14 {
+  max-height: 3.5rem;
+}
+
+.max-h-16 {
+  max-height: 4rem;
+}
+
+.max-h-2 {
+  max-height: 0.5rem;
+}
+
+.max-h-2\.5 {
+  max-height: 0.625rem;
+}
+
+.max-h-20 {
+  max-height: 5rem;
+}
+
+.max-h-24 {
+  max-height: 6rem;
+}
+
+.max-h-28 {
+  max-height: 7rem;
+}
+
+.max-h-3 {
+  max-height: 0.75rem;
+}
+
+.max-h-3\.5 {
+  max-height: 0.875rem;
+}
+
+.max-h-32 {
+  max-height: 8rem;
+}
+
+.max-h-36 {
+  max-height: 9rem;
+}
+
+.max-h-4 {
+  max-height: 1rem;
+}
+
+.max-h-40 {
+  max-height: 10rem;
+}
+
+.max-h-44 {
+  max-height: 11rem;
+}
+
+.max-h-48 {
+  max-height: 12rem;
+}
+
+.max-h-5 {
+  max-height: 1.25rem;
+}
+
+.max-h-52 {
+  max-height: 13rem;
+}
+
+.max-h-56 {
+  max-height: 14rem;
+}
+
+.max-h-6 {
+  max-height: 1.5rem;
+}
+
+.max-h-60 {
+  max-height: 15rem;
+}
+
+.max-h-64 {
+  max-height: 16rem;
+}
+
+.max-h-7 {
+  max-height: 1.75rem;
+}
+
+.max-h-72 {
+  max-height: 18rem;
+}
+
+.max-h-8 {
+  max-height: 2rem;
+}
+
+.max-h-80 {
+  max-height: 20rem;
+}
+
+.max-h-9 {
+  max-height: 2.25rem;
+}
+
+.max-h-96 {
+  max-height: 24rem;
+}
+
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-none {
+  max-height: none;
+}
+
+.max-h-px {
+  max-height: 1px;
+}
+
 .w-3\/4 {
   width: 75%;
 }
@@ -827,6 +995,10 @@ video {
 
 .w-5\/6 {
   width: 83.333333%;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .grow-0 {
@@ -905,8 +1077,16 @@ video {
   gap: 1.5rem;
 }
 
+.justify-self-center {
+  justify-self: center;
+}
+
 .border-2 {
   border-width: 2px;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-black {
@@ -995,6 +1175,36 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
@@ -1069,12 +1279,28 @@ video {
   font-weight: 300;
 }
 
+.font-extralight {
+  font-weight: 200;
+}
+
+.font-thin {
+  font-weight: 100;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
 
 .leading-3 {
   line-height: .75rem;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 
 .text-gray-500 {
@@ -1085,6 +1311,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
@@ -1144,6 +1380,10 @@ video {
     right: 2rem;
   }
 
+  .md\:left-20 {
+    left: 5rem;
+  }
+
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -1164,6 +1404,10 @@ video {
     grid-row: span 1 / span 1;
   }
 
+  .md\:row-span-2 {
+    grid-row: span 2 / span 2;
+  }
+
   .md\:row-start-2 {
     grid-row-start: 2;
   }
@@ -1172,9 +1416,21 @@ video {
     grid-row-start: 3;
   }
 
+  .md\:row-start-1 {
+    grid-row-start: 1;
+  }
+
   .md\:mx-24 {
     margin-left: 6rem;
     margin-right: 6rem;
+  }
+
+  .md\:mb-24 {
+    margin-bottom: 6rem;
+  }
+
+  .md\:mb-36 {
+    margin-bottom: 9rem;
   }
 
   .md\:block {
@@ -1213,6 +1469,14 @@ video {
     height: 100%;
   }
 
+  .md\:h-\[30rem\] {
+    height: 30rem;
+  }
+
+  .md\:h-\[26rem\] {
+    height: 26rem;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -1224,6 +1488,19 @@ video {
   .md\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
+  }
+
+  .md\:w-screen {
+    width: 100vw;
+  }
+
+  .md\:w-max {
+    width: -moz-max-content;
+    width: max-content;
+  }
+
+  .md\:w-10\/12 {
+    width: 83.333333%;
   }
 
   .md\:flex-1 {
@@ -1308,6 +1585,14 @@ video {
     place-self: end;
   }
 
+  .md\:justify-self-end {
+    justify-self: end;
+  }
+
+  .md\:justify-self-center {
+    justify-self: center;
+  }
+
   .md\:bg-transparent {
     background-color: transparent;
   }
@@ -1332,6 +1617,10 @@ video {
     padding: 0px;
   }
 
+  .md\:p-2 {
+    padding: 0.5rem;
+  }
+
   .md\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
@@ -1350,6 +1639,21 @@ video {
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .md\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .md\:pr-8 {
@@ -1403,6 +1707,11 @@ video {
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
 
